# image_edit_dataset_factory

./: .gitignore  Makefile  pyproject.toml
configs/: api_mode.yaml  default.yaml  dev_small.yaml  gpu_qwen.yaml  server_qwen.yaml
docs/: API_CONTRACT.md  ASSUMPTIONS.md  DATA_FORMAT.md  DEPLOY_MULTI_ENV.md  QA_GUIDE.md  README.md  SERVICE_ARCHITECTURE.md  SPEC_MAPPING.md
envs/: edit_env.yml  layered_env.yml  orchestrator_env.yml
scripts/: create_demo_input.py  run_all.py  run_decompose.py  run_export.py  run_filter.py  run_generate.py  run_ingest.py  run_lint.py  run_qa.py  run_workflow_api_mode.sh  start_edit_service.sh  start_layered_service.sh  start_services_tmux.sh  test_qwen_single.py  update_dependencies.py
services/: __init__.py  common.py
services/edit_service/: __init__.py  app.py
services/layered_service/: __init__.py  app.py
src/image_edit_dataset_factory/: __init__.py
src/image_edit_dataset_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/image_edit_dataset_factory/backends/: __init__.py  api_service_backends.py  edit_base.py  factory.py  layered_base.py  mock_backend.py  mock_backends.py  modelscope_utils.py  opencv_fallback.py  opencv_inpaint.py  qwen_image_edit.py  qwen_image_edit_modelscope.py  qwen_layered.py  qwen_layered_modelscope.py
src/image_edit_dataset_factory/clients/: __init__.py  contracts.py  edit_client.py  http_client.py  layered_client.py  serialization.py
src/image_edit_dataset_factory/core/: __init__.py  config.py  enums.py  logging.py  paths.py  schema.py
src/image_edit_dataset_factory/pipeline/: __init__.py  decompose.py  export.py  export_step.py  filter.py  generate_samples.py  ingest.py  lint_step.py  manifest.py  orchestrator.py  qa_step.py  quotas.py
src/image_edit_dataset_factory/pipeline/generate/: __init__.py  base.py  consistency.py  portrait.py  semantic.py  structural.py  style.py  text.py
src/image_edit_dataset_factory/qa/: __init__.py  consistency.py  face_id.py  linter.py  ocr_check.py  report.py
src/image_edit_dataset_factory/scripts/: __init__.py  common.py  run_all.py  run_decompose.py  run_export.py  run_filter.py  run_generate.py  run_ingest.py  run_lint.py  run_qa.py  test_qwen_single.py
src/image_edit_dataset_factory/utils/: __init__.py  hashing.py  image_io.py  jsonl.py  mask_ops.py  metrics.py  naming.py  parallel.py  text_ops.py  validators.py
tests/: test_api_clients.py  test_consistency.py  test_linter.py  test_mask_ops.py  test_naming.py  test_pipeline_api_mode.py  test_pipeline_mock.py  test_service_edit_api.py  test_service_layered_api.py
