[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-edit-dataset-factory"
version = "0.1.0"
description = "Modular pipeline for building and QA-ing image editing datasets"
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [{name = "Codex"}]
dependencies = [
  "pydantic>=2.6,<3.0",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "Pillow>=10.0",
  "opencv-python-headless>=4.8",
  "scikit-image>=0.22",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.7",
]
gpu = [
  "torch>=2.2",
  "diffusers>=0.31",
  "transformers>=4.45",
  "accelerate>=0.34",
]

[project.scripts]
iedf-run-all = "image_edit_dataset_factory.scripts.run_all:main"
iedf-run-ingest = "image_edit_dataset_factory.scripts.run_ingest:main"
iedf-run-filter = "image_edit_dataset_factory.scripts.run_filter:main"
iedf-run-decompose = "image_edit_dataset_factory.scripts.run_decompose:main"
iedf-run-generate = "image_edit_dataset_factory.scripts.run_generate:main"
iedf-run-export = "image_edit_dataset_factory.scripts.run_export:main"
iedf-run-lint = "image_edit_dataset_factory.scripts.run_lint:main"
iedf-run-qa = "image_edit_dataset_factory.scripts.run_qa:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]
