[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-edit-dataset-factory"
version = "0.2.0"
description = "Image editing dataset factory with mock/fallback + optional ModelScope Qwen backends"
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "opencv-python>=4.8",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scikit-image>=0.22",
  "pydantic>=2.6,<3.0",
  "modelscope>=1.16.0",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "pre-commit>=3.7",
]

[project.scripts]
iedf-run-all = "image_edit_dataset_factory.scripts.run_all:main"
iedf-run-ingest = "image_edit_dataset_factory.scripts.run_ingest:main"
iedf-run-generate = "image_edit_dataset_factory.scripts.run_generate:main"
iedf-run-qa = "image_edit_dataset_factory.scripts.run_qa:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py310"]
